--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -1,19 +1,30 @@
 <mvc:View 
     controllerName="logaligroup.employees.controller.MainView"
     xmlns="sap.m"
+    xmlns:core="sap.ui.core"
     xmlns:mvc="sap.ui.core.mvc" 
     displayBlock="true"
 >
     <Shell id="idShell">
         <App id="app">
             <pages>
-                <Page id="page" title="{i18n>title}">
-                    <content />
+                <Page id="idTitlePage" title="{i18n>title}">
+                    <content>
+                        <Label id="idEmployeeLabel" class="sapUiSmallMargin" text="{i18n>labelEmployee}" labelFor="idEmployeeInput"/>
+                        <Input id="idEmployeeInput" class="sapUiSmallMarginEnd sapUiTinyMarginTop" width="200px" maxLength="6" liveChange="onInputLiveChange"/>
+
+                        <Label id="idCountryLabel" class="sapUiSmallMargin" text="{i18n>labelCountry}" visible="false"/>
+                        <Select id="idSelect" visible="false" class="sapUiTinyMarginTop">
+                            <items>
+                                <core:Item id="idUnitedStatesItem" key="US" text="{i18n>countryUS}"/>
+                                <core:Item id="idBrazilItem" key="BR" text="{i18n>countryBR}"/>
+                                <core:Item id="idSpainItem" key="ES" text="{i18n>countryES}"/>
+                                <core:Item id="idPortugalItem" key="PT" text="{i18n>countryPT}"/>
+                            </items>
+                        </Select>
+                    </content>
                 </Page>            
             </pages>
         </App>
     </Shell>
-
-
-
 </mvc:View>
