--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -11,12 +11,12 @@
                 <Page id="idTitlePage" title="{i18n>title}">
                     <content>
                         <Label id="idEmployeeLabel" class="sapUiSmallMargin" text="{i18n>labelEmployee}" labelFor="idEmployeeInput"/>
-                        <Input id="idEmployeeIdInput" class="sapUiSmallMarginEnd sapUiTinyMarginTop" value="{/employeeId}" width="200px" maxLength="6" liveChange="onEmployeeIdInputLiveChange"/>
+                        <Input id="idEmployeeIdInput" class="sapUiSmallMarginEnd sapUiTinyMarginTop" value="{/EmployeeId}" width="200px" maxLength="6" liveChange="onEmployeeIdInputLiveChange"/>
 
                         <Label id="idCountryLabel" class="sapUiSmallMargin" text="{i18n>labelCountry}" visible="false"/>
-                        <Select id="idListCountrySelect" visible="false" class="sapUiTinyMarginTop" selectedKey="{/countryKey}" items="{/listCountry}">
+                        <Select id="idListCountrySelect" visible="false" class="sapUiTinyMarginTop" selectedKey="{/CountryKey}" items="{/ListCountry}">
                             <items>
-                                <core:Item id="idTextItem" key="{key}" text="{text}"/>
+                                <core:Item id="idTextItem" key="{Key}" text="{Text}"/>
                             </items>
                         </Select>
                     </content>
