--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -10,18 +10,75 @@
             <pages>
                 <Page id="idTitlePage" title="{i18n>title}">
                     <content>
-                        <Label id="idEmployeeLabel" class="sapUiSmallMargin" text="{i18n>labelEmployee}" labelFor="idEmployeeInput"/>
-                        <Input id="idEmployeeInput" class="sapUiSmallMarginEnd sapUiTinyMarginTop" width="200px" maxLength="6" liveChange="onInputLiveChange"/>
+                        <HBox id="idInputHBox">
+                            <Label id="idEmployeeLabel" class="sapUiSmallMargin" text="{i18n>labelEmployee}" labelFor="idEmployeeInput"/>
+                            <Input id="idEmployeeIdInput" class="sapUiSmallMarginEnd sapUiTinyMarginTop" value="{/EmployeeId}" width="200px" maxLength="6"/>
 
-                        <Label id="idCountryLabel" class="sapUiSmallMargin" text="{i18n>labelCountry}" visible="false"/>
-                        <Select id="idSelect" visible="false" class="sapUiTinyMarginTop">
-                            <items>
-                                <core:Item id="idUnitedStatesItem" key="US" text="{i18n>countryUS}"/>
-                                <core:Item id="idBrazilItem" key="BR" text="{i18n>countryBR}"/>
-                                <core:Item id="idSpainItem" key="ES" text="{i18n>countryES}"/>
-                                <core:Item id="idPortugalItem" key="PT" text="{i18n>countryPT}"/>
-                            </items>
-                        </Select>
+                            <Label id="idCountryLabel" class="sapUiSmallMargin" text="{i18n>labelCountry}"/>
+                            <Select id="idListCountrySelect" class="sapUiTinyMarginTop" selectedKey="{/CountryKey}" items="{/ListCountry}">
+                                <items>
+                                    <core:Item id="idTextItem" key="{Key}" text="{Text}"/>
+                                </items>
+                            </Select>
+
+                            <Button id="idFilterButton" class="sapUiSmallMarginBegin sapUiTinyMarginTop" text="{i18n>LabelBtnFilter}" icon="sap-icon://search" press="onFilterButtonPress"/>
+                            <Button id="idClearFilterButton" class="sapUiSmallMarginBegin sapUiTinyMarginTop" text="{i18n>LabelBtnClearFilter}" icon="sap-icon://clear-filter" press="onClearFilterButtonPress"/>
+                        </HBox>
+
+                        <HBox id="idTableHBox">
+                            <Panel id="idTablePanel">
+                                <Table id="idEmployeesTable" items="{/Employees}">
+
+                                    <!-- Colunas -->
+                                    <columns>
+                                        <!-- ID -->
+                                        <Column id="idTableIDColumn">
+                                            <header>
+                                                <Label id="idIDTableLabel" text="{i18n>labelId}"/>
+                                            </header>
+                                        </Column>
+
+                                        <!-- Name -->
+                                        <Column id="idTableNameColumn">
+                                            <header>
+                                                <Label id="idNameTableLabel" text="{i18n>labelName}"/>
+                                            </header>
+                                        </Column>
+
+                                        <!-- Country -->
+                                        <Column id="idTableCountryColumn">
+                                            <header>
+                                                <Label id="idCountryTableLabel" text="{i18n>labelCountry}"/>
+                                            </header>
+                                        </Column>
+
+                                        <!-- City -->
+                                        <Column id="idTableCityColumn">
+                                            <header>
+                                                <Label id="idCityTableLabel" text="{i18n>labelCity}"/>
+                                            </header>
+                                        </Column>
+                                    </columns>
+
+                                    <!-- Linhas -->
+                                    <items>
+                                        <ColumnListItem id="idColumnListItem">
+                                            <cells>
+                                                <!-- ID -->
+                                                <Label id="idEmployeeIDItemLabel" text="{EmployeeID}"/>
+                                                <!-- Name -->
+                                                <Label id="idNameItemLabel" text="{FirstName} , {FirstName}"/>
+                                                <!-- Country -->
+                                                <Label id="idCountryItemLabel" text="{Country}"/>
+                                                <!-- City -->
+                                                <Label id="idCityItemLabel" text="{City}"/>
+                                            </cells>
+                                        </ColumnListItem>
+                                    </items>
+                                </Table>
+                            </Panel>
+                        </HBox>
+
                     </content>
                 </Page>            
             </pages>
