Ativando clique na tabela

--- a/webapp/view/MainView.view.xml
+++ b/webapp/view/MainView.view.xml
@@ -62,7 +62,7 @@
 
                                     <!-- Linhas -->
                                     <items>
-                                        <ColumnListItem id="idColumnListItem">
+                                        <ColumnListItem id="idColumnListItem" type="Active">
                                             <cells>
                                                 <!-- ID -->
                                                 <Label id="idEmployeeIDItemLabel" text="{EmployeeID}"/>
