Utilizando propiedade groupHeaderFactory no agrupamento de ítens

--- a/webapp/view/ListTypes.view.xml
+++ b/webapp/view/ListTypes.view.xml
@@ -48,7 +48,8 @@ controllerName="logaligroup.employees.controller.ListTypes"
 												path: 'Brand',
 												descending: false,
 												group: true
-											}
+											},
+											groupHeaderFactory: '.getGroupHeader'
 										}"
 										
 									>
